# python-quote-scraper

./: .bumpversion.cfg  .pre-commit-config.yaml  .readthedocs.yml  .safety-policy.yml  CHANGELOG-dev.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  nitpick-style.toml  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
attic/quote_scraper/: files.py
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
quote_scraper/: brainy.py  cache.py  cli.py  constants.py  errors.py  files.py  foos.py  import.py  inspiring.py  kinds.py  process.py  quote.py  scraper.py  settings.py  urls.py  validate.py
tests/: test_cli.py  test_process.py  test_some_function.py
tests/data/: cached-brainy-qod.json  cached-inspire-bedtime.json  cached-inspire-qod.json  cached-inspire-running.json
tests/test_example/: test_some_function.py
