[tool.poetry]
name = "quote-scraper"
description = "A tool to scrape quotes from web pages"
version = "0.1.1-dev2"
license = "MIT"

authors = ["Quien Sabe <qs5779@mail.com>"]

readme = "README.md"

repository = "https://github.com/wtfo-guru/quote-scraper"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.poetry.scripts]
qscrape = "quote_scraper.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "^8.1.0"
bs4 = "^0.0.2"
loguru = "^0.7.2"
pyyaml = "^6.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.11"
wemake-python-styleguide = "^0.19"
flake8-pytest-style = ">=1.6,<3.0"
nitpick = "^0.35"
safety = ">=2.3,<4.0"
pytest = ">=7.4,<9.0"
pytest-cov = ">=4,<6"
pytest-randomly = "^3.12"
isort = "^5.13"
black = ">=22.12,<25.0"
types-pyyaml = "^6.0.12.20240808"
wheel = "^0.43"
pytest-click = "^1.1.0"
doc8 = "^1.0"
types-requests = "^2.32.0.20240602"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.2,<8.0"
sphinx-autodoc-typehints = ">=1.19,<3.0"
m2r2 = "^0.3"
tomli = "^2.0"



[tool.poetry.group.tests.dependencies]
typer = "^0.12.5"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = [
  "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml",
  "./.nitpick-wtf-style.toml",
]
