[tool.poetry]
name = "quote-scraper"
description = "A tool to scrape quotes from web pages"
version = "0.1.2-dev3"
license = "MIT"

authors = ["Quien Sabe <qs5779@mail.com>"]

readme = "README.md"

repository = "https://github.com/wtfo-guru/quote-scraper"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.poetry.scripts]
qscrape = "quote_scraper.cli:main"
qcached = "quote_scraper.process:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = "^8.1.0"
loguru = "^0.7.2"
pyyaml = "^6.0"
beautifulsoup4 = "^4.13.3"
wtforglib = "^1.1.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.11"
wemake-python-styleguide = "^1.0"
flake8-pytest-style = ">=1.6,<3.0"
nitpick = "^0.35"
safety = ">=2.3,<4.0"
pytest = ">=7.4,<9.0"
pytest-cov = ">=4,<6"
pytest-randomly = "^3.12"
isort = "^6.0"
black = "^25.0"
types-pyyaml = "^6.0.12.20240808"
pytest-click = "^1.1.0"
doc8 = "^1.0"
types-requests = "^2.32.0.20240602"
testfixtures = "^8.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0"
sphinx-autodoc-typehints = "^3.0"
m2r2 = "^0.3"
tomli = "^2.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://www.wtfo-guru.com/.well-known/nitpick-wtf-style.toml"
