[project]
name = "quote-scraper"
description = "A tool to scrape quotes from web pages"
license = "MIT"
keywords = []
version = "0.1.2-dev4"
dynamic = ["classifiers"]
readme = "README.md"
authors = [{name = "Quien Sabe", email = "qs5779@mail.com"}]
requires-python = '>=3.10,<4.0'
dependencies = [
  'click (>=8.1.0,<9.0.0)',
  'loguru (>=0.7.2,<0.8.0)',
  'pyyaml (>=6.0,<7.0)',
  'beautifulsoup4 (>=4.13.3,<5.0.0)',
  'wtforglib (>=1.0.2,<2.0.0)'
]

[project.urls]
repository = "https://github.com/wtfo-guru/quote-scraper"

[project.scripts]
qscrape = "quote_scraper.cli:main"
qcached = "quote_scraper.process:main"

[tool.poetry]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.11"
wemake-python-styleguide = "^1.0"
flake8-pytest-style = ">=1.6,<3.0"
nitpick = "^0.35"
safety = ">=2.3,<4.0"
pytest = ">=7.4,<9.0"
pytest-cov = ">=4,<6"
pytest-randomly = "^3.12"
isort = "^6.0"
black = "^25.0"
types-pyyaml = "^6.0.12.20240808"
pytest-click = "^1.1.0"
doc8 = "^1.0"
types-requests = "^2.32.0.20240602"
testfixtures = "^8.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0"
sphinx-autodoc-typehints = "^3.0"
sphinx_mdinclude = "^0.6.2"
tomli = "^2.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://www.wtfo-guru.com/.well-known/nitpick-wtf-style.toml"
